--- a/AtkTennisWeb/Views/SystemSettings/IdentityRoleSettings.cshtml
+++ b/AtkTennisWeb/Views/SystemSettings/IdentityRoleSettings.cshtml
@@ -47,10 +47,10 @@
                                     {
                                         <tr style="text-align:center" id="">
                                             <td>@Model.appIdentityRoles[i].Name</td>
-                                            <td>
+                                            @*<td>
                                                 <button class="btn btn-warning" id="@Model.appIdentityRoles[i].Id" onclick="openUpdateRoleModal(this.id)"><i class="fas fa-edit"></i></button>
                                                 <button class="btn btn-danger" id="@Model.appIdentityRoles[i].Id" onclick="deleteOpenModal(this.id)"><i class="fas fa-trash"></i></button>
-                                            </td>
+                                            </td>*@
 
                                         </tr>
                                     }
@@ -97,7 +97,7 @@
                                 <tbody>
 
                                     <tr style="text-align:center">
-                                        <td>Yönetim Paneli </td>
+                                        <td>AnaSayfa</td>
                                         @for (int i = 0; i < Model.userSettings.Count; i++)
                                         {
                                             if (Model.userSettings[i].Dashboard == true)
