--- a/AtkTennisWeb/Views/Public/SignIn.cshtml
+++ b/AtkTennisWeb/Views/Public/SignIn.cshtml
@@ -18,7 +18,7 @@
 <link href="~/adminRoot/css/jquery-confirm.css" rel="stylesheet" />
 
 
-<body class="hold-transition login-page" style="background-color:black">
+<body class="hold-transition login-page" style="background-color:#424242">
     <div class="login-box">
         <div class="login-logo">
             <img src="~/images/atkimg/altyapilogo.png" alt="Alternate Text" style="width:35%">
@@ -63,8 +63,10 @@
                        
                         <!-- /.col -->
                         <div class="col-4">
-                            <button  type="submit" class="btn btn-warning btn-block" onclick="signIn()">Giriş Yap</button>
+                            <button type="submit" class="btn btn-warning btn-block" onclick="signIn()">Giriş Yap</button>
                         </div>
+                        
+
                         <!-- /.col -->
                     </div>
                 </div>
@@ -79,7 +81,7 @@
 <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="~/adminRoot/js/adminlte.js"></script>
 <script src="~/lib/jquery/dist/jquery-confirm.js"></script>
-
+<script src="~/adminRoot/js/loading.js"></script>
 
 <script>
 
@@ -127,12 +129,20 @@
                                     content: "Kullanıcı Adı ve/veya Şifre Hatalı.",
                                     buttons: {
                                         TAMAM: function () {
-
+                                           
                                         }
                                     }
                                 });
+
+                                
                             }
+
+
+
                             else {
+
+                              
+
                                 window.location.href = "../AdminHome/Index?date=" + today;
                             }
                         }
@@ -153,7 +163,9 @@
     });   
 
     function signIn() {
-       
+
+      
+      
 
         try {
             $.ajax({
@@ -183,6 +195,7 @@
                        
                         localStorage.setItem("loginCheck", check);
                         
+                       
 
                         window.location.href = "../AdminHome/Index?date=" + today;
                     }
@@ -194,11 +207,13 @@
                             buttons: {
                                 TAMAM: function () {
 
+                                   
 
                                 }
                             }
                         });
 
+                    
                 },
                 error: function (textStatus, errorThrown) {
                     console.log(JSON.stringify(textStatus));
