--- a/AtkTennisWeb/Views/Shared/_Layout.cshtml
+++ b/AtkTennisWeb/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
     <link href="~/adminRoot/css/jquery-confirm.css" rel="stylesheet" />
     <link href="~/adminRoot/css/calender.css" rel="stylesheet" />
     <link href="~/adminRoot/css/loading.css" rel="stylesheet" />
+    <link href="~/lib/jquery/dist/jquery-ui.css" rel="stylesheet" />
 
     <link rel="stylesheet" href="~/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" href="~/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
@@ -34,6 +35,8 @@
 
     <!-- jQuery -->
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+
+    <script src="~/lib/jquery/dist/jquery-ui.js"></script>
 </head>
 
 @{
@@ -449,8 +452,6 @@
         </aside>
 
     </div>
-
-    <script src="~/lib/jquery/dist/jquery-ui.js"></script>
 
     <script>
         $.widget.bridge('uibutton', $.ui.button)
